[metadata]
name = reddio
version = 0.0.1
description = A simple GET only reddit API wrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/VarMonke/reddio
author = VarMonke, WitherredAway
author_email = var.monke@gmail.com, sdssouvic99@gmail.com
license = MIT
license_file = LICENSE
project_urls =
    Issue Tracker = https://github.com/VarMonke/reddio/issues

[options]
packages = find:
python_requires = >=3.8
install_requires =
    aiohttp >= 3.8.1